--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,74 @@
+nav{
+	position: fixed;
+	background-color: gray;
+	width: 100%;
+	padding-left: 120px;
+	padding-right: 60px;
+}
 
+nav > ul{
+	position: relative;
+	display: block;
+}
+
+nav > ul > li{
+	display: inline-block;
+}
+
+nav > ul > li::after{
+	content: "|";
+	color: black;
+}
+
+main{
+	padding: 100px;
+}
+
+.circular{
+	border-radius: 50%;
+	border: 1px solid black;
+	position: absolute;
+	left: 60px;
+	height: 40px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	vertical-align: middle;
+	width: auto;
+}
+
+.entire{
+	background-image: url(../images/outerspace_landscape.jpeg);
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.image-section{
+	margin-top: 100px;
+	width: 600px;
+	height: 300px;
+	border: 10px dotted green;
+	margin-left: auto;
+	margin-right: auto;
+	position: relative;
+}
+
+.image-box{
+	position: relative;
+	
+}
+
+.cat{
+	width: 200px;
+	height: 200px;
+	position: absolute;
+	top: -100px;
+	left: -100px;
+}
+
+.dog{
+	width: 200px;
+	height: 200px;
+	position: absolute;
+	top: 150px;
+	right: -100px;
+}
