--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,21 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+.neb1, .neb2{
+	padding-top: 15px;
+	padding-bottom: 15px;
+	display: inline-block;
+	width: 300px;
+	height: auto;
+}
+
+.neb1{
+	float: left;
+	margin-right: 15px;
+}
+
+.neb2{
+	float: right;
+	margin-left: 15px;
+}
